--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -42,7 +42,7 @@
       <div class="ion-padding">
                           <ion-button
                             fill="outline"
-                            routerLink="/healthdata">
+                            routerLink="/health-data-display">
                             <ion-icon name="heart" class="heart-icon" color="danger"></ion-icon>
                              Health Form
                           </ion-button>
