--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
@@ -33,9 +33,9 @@
   }
   
   .heading-container h2 {
-    font-size: 1.4rem;
-    font-weight: 100;
-    color:  #E63946;
+    // font-size: 1.4rem;
+    font-weight: 700px;
+    // color:  #E63946;
   }
   
   .image-container {
