--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -16,7 +16,7 @@ body[color-theme="dark"] {
   --ion-color-step-450: #737373;
   --ion-color-step-500: #808080;
   --ion-color-step-550: #8c8c8c;
-  --ion-color-step-600: #999999;
+  --ion-color-step-600: #4185FF;
   --ion-color-step-650: #a6a6a6;
   --ion-color-step-700: #b3b3b3;
   --ion-color-step-750: #bfbfbf;
