--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="heading-container">
-    <h2>Customize your workout plan here</h2>
+    <h2>Customize your workout plan</h2>
   </div>
   
   <div class="grid-container">
@@ -70,7 +70,7 @@
              </ion-col>
              <ion-col size="6" size-lg="3">
               <div class="inputField-container" *ngIf="hasWeight(i)">
-                <ion-label>weight*</ion-label>
+                <ion-label>Weight*</ion-label>
                 <ion-item lines="none" class="input-field">
                   <ion-input formControlName="weight" type="number" placeholder="Weight (kg)"></ion-input>
                 </ion-item>
@@ -78,7 +78,7 @@
              </ion-col>
              <ion-col size="6" size-lg="3">
               <div class="inputField-container">
-                <ion-label>duration*</ion-label>
+                <ion-label>Duration*</ion-label>
                 <ion-item lines="none" class="input-field">
                   <ion-input formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
                 </ion-item>
