import  workout  fix

--- a/src/app/pages/calories-calculator/diet-calculator/diet-calculator.component.html
+++ b/src/app/pages/calories-calculator/diet-calculator/diet-calculator.component.html
@@ -3,7 +3,7 @@
     <h1>Diet Calculator</h1>
   </ion-card-title>
   <ion-card-content>
-    <h2>Enter your meal:</h2>
+    <h2 style="font-size: 20px;">Enter your meal:</h2>
     <ion-item>
       <!-- <ion-label position="floating" style="font-size: 20px; text-align: center;">Enter your meal:</ion-label> -->
       <ion-textarea [(ngModel)]="meal" rows="5"></ion-textarea>
