--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.scss
@@ -4,7 +4,7 @@
     width: 80%;
     text-align: center;
     margin: auto;
-    color: black;
+    // color: black;
   }
   input, select {
     display: block;
@@ -84,4 +84,9 @@
   width:80%;
   margin: 0 auto;
   margin-bottom: 15px;
+  border-radius: 25px;
+  // padding: 20px;
+    // width: 80%;
+    // text-align: center;
+    // margin: auto;
 }
