--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -1,13 +1,13 @@
 .user-message {
-  background-color: #A8DADC; //#f0f0f0; 
+  background-color: #6a5acd;
+  color: white; 
   border-radius: 15px;
   padding: 10px;
   margin-bottom: 10px;
   margin-left: auto; // Push the message to the left
   max-width: 70%; // Limit the width to a percentage of the container
   align-self: flex-start; 
-  
-  }
+}
 
 * {
   font-family: 'Montserrat', sans-serif;
@@ -21,8 +21,8 @@ ion-footer{
 }
 
   .bot-message {
-   background-color: #e2e6e9; //#e51b1b;
-   color: #000;
+   background-color: #b301ff; //#e51b1b;
+   color: white;
    border-radius: 15px;
    padding: 10px;
    margin-right: auto; 
